--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
             <h3 class="resume-title">MISTERI</h3>
 
             <div class="resume-item pb-0">
-              <a href="assets/img/kuyang3.jpeg"
+              <img src="assets/img/bg horor9.jpeg" alt="" data-aos="fade-in" class="">
               <h4>kuyang</h4>
               <p><em>Another Indonesian Horror Story comes from the island of Kalimantan called Kuyang. His figure is like a human during the day and blends in with society, but at night he transforms into a scary ghost.
 
