--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
 
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <h3 class="resume-title">MISTERI</h3>
-            <img src="assets/img/kuyang3.jpeg" class="">
+            <img src="assets/img/kuyang3.jpeg"
             <div class="resume-item pb-0">
               <h4>kuyang</h4>
               <p><em>Another Indonesian Horror Story comes from the island of Kalimantan called Kuyang. His figure is like a human during the day and blends in with society, but at night he transforms into a scary ghost.
