--- a/index.html
+++ b/index.html
@@ -107,8 +107,13 @@
 
       <!-- Section Title -->
       <section id="hero" class="hero section dark-background">
+        <div class="video-wrap">
+                    <video autoplay="" loop="" muted="" class="custom-video" poster="">
+                        <source src="video/cyber.mp4" type="video/mp4">
+
+                        Your browser does not support the video tag.
+                    </video>
         
-        <img src="assets/img/bg horor9.jpeg" alt="" data-aos="fade-in" class="">
 
         <div class="container" data-aos="fade-up" data-aos-delay="100">
       <div class="container section-title" data-aos="fade-up">
