--- a/index.html
+++ b/index.html
@@ -93,8 +93,13 @@
 
     <!-- Hero Section -->
     <section id="hero" class="hero section dark-background">
+       <div class="video-wrap">
+                    <video autoplay="" loop="" muted="" class="custom-video" poster="">
+                        <source src="assets/img/hror bg.mp4" type="video/mp4">
 
-      <img src="assets/img/beground4.jpg" alt="" data-aos="fade-in" class="">
+                        Your browser does not support the video tag.
+                    </video>
+      
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
         <h2>HORORR !!!</h2>
