--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     <!-- Hero Section -->
     <section id="hero" class="hero section dark-background">
        <div class="video-wrap">
-                    <video autoplay="" loop="" muted="" class="custom-video" poster="">
+                    <video autoplay="" loop="" muted="" class="custom-video" full="">
                         <source src="assets/img/hror bg.mp4" type="video/mp4">
 
                         Your browser does not support the video tag.
